--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,3 +1,3 @@
-@import "./utils/variables";
-@import "./base-settings/normalize";
-@import "./components/page-header";
+@import './utils/variables';
+@import './base-settings/normalize';
+@import './components/page-header';
