--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,3 +1,7 @@
 @import './utils/variables';
+@import './utils/placeholders';
+@import './utils/mixins';
 @import './base-settings/normalize';
+@import './components/body';
+@import './components/logo';
 @import './components/page-header';
