--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -19,7 +19,8 @@
     margin-right: 50px;
   }
 }
-.container {
+.page-header__container {
+  @extend %container;
   display: flex;
 }
 .page-header__link {
