--- a/sass/components/_body.scss
+++ b/sass/components/_body.scss
@@ -19,10 +19,9 @@ p {
 .link {
   text-decoration: none;
 }
-.container {
-  margin-left: auto;
-  margin-right: auto;
-  padding-left: 15px;
-  padding-right: 15px;
-  width: 1200px;
+
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
 }
