--- a/sass/components/_page-footer.scss
+++ b/sass/components/_page-footer.scss
@@ -1,57 +1,139 @@
 .page-footer {
-     padding-top: 60px;
+  padding-top: 60px;
   padding-bottom: 60px;
   background-color: $secondary-background-color;
-		&__join-us {
-		}
-		&__subtitle {
-		}
-		&__social {
-		}
-		&__sign-up {
-		}
-		&__subtitile {
-		}
-		&__button {
-		}
+  &__container {
+    @extend %container;
+    display: flex;
+  }
+  &__join-us {
+    min-width: 206px;
+    min-height: 80px;
+    margin-top: 12px;
+    margin-left: 70px;
+  }
+  &__subtitle {
+    display: block;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: $white-text-color;
+    margin-bottom: 20px;
+  }
 }
-.container {
+.page-footer__logo {
+  display: block;
+  margin-bottom: 20px;
 }
 .logo {
+  &--white {
+    color: $white-text-color;
+  }
 }
-.logo--white {
-}
+
 .address {
-		&_link {
-		}
-		&__list {
-		}
-		&__item {
-		}
-		&__link {
-		}
+  &__list {
+    @extend %list;
+  }
+  &__item {
+    gap: 9px;
+  }
+  &__link {
+    text-decoration: none;
+    transition: color $time-function;
+    font-style: normal;
+    color: $transparent-color;
+    &--white {
+      color: $white-text-color;
+    }
+    &:hover,
+    &:focus {
+      color: $accent-color;
+    }
+  }
+  &__link--white {
+  }
 }
 .social {
-		&__list {
-		}
-		&__item {
-		}
-		&__link {
-		}
-		&__icon {
-		}
+  &__list {
+    @extend %list;
+  }
+  &__item {
+  }
+
+  &__icon {
+  }
+}
+.social__link {
+  transition: background-color $time-function;
+  color: $white-text-color;
+  background-color: rgba(255, 255, 255, 0.1);
+  &:hover,
+  &:focus {
+    background-color: $accent-color;
+  }
 }
 .sign-up {
-		&__form {
-		}
-		&__field {
-		}
-		&__input {
-		}
-		&__label {
-		}
+  width: 570px;
+  margin-left: auto;
+  margin-top: 12px;
+  &__form {
+    position: relative;
+    display: flex;
+  }
+  &__field {
+    display: inline-block;
+    flex-grow: 1;
+  }
+  &__input {
+    width: 100%;
+    height: 50px;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    border-radius: 4px;
+    box-shadow: (0px 4px 4px rgba(0, 0, 0, 0.15));
+    background-color: transparent;
+    padding-top: 15px;
+    padding-right: 16px;
+    padding-bottom: 15px;
+    padding-left: 16px;
+
+    font-size: 16px;
+    line-height: 1.25;
+    letter-spacing: 0.03em;
+    color: rgba(255, 255, 255, 0.6);
+  }
+  &__label {
+    position: absolute;
+    top: 50%;
+    left: 16px;
+
+    font-size: 16px;
+    line-height: 1.25;
+    letter-spacing: 0.03em;
+    color: rgba(255, 255, 255, 0.6);
+    transform: translateY(-50%);
+    transition: color $time-function;
+  }
+  &__button {
+    position: relative;
+    padding: 10px 62px 10px 28px;
+    margin-left: 12px;
+  }
+  &__icon {
+    fill: $white-text-color;
+    margin-left: 10px;
+    position: absolute;
+    top: 50%;
+    right: 28px;
+    transform: translateY(-50%);
+  }
 }
-.button {
-		&__icon {
-		}
+
+.sign-up__input {
+  &:focus + .sign-up__label,
+  &:not(:placeholder-shown) + .sign-up__label {
+    color: transparent;
+  }
 }
