--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,4 +4,7 @@
 @import './base-settings/normalize';
 @import './components/body';
 @import './components/logo';
+@import './components/button';
 @import './components/page-header';
+@import './components/page-footer';
+@import './components/socials';
