--- a/sass/utils/_placeholders.scss
+++ b/sass/utils/_placeholders.scss
@@ -1,10 +1,22 @@
-%img {
-  display: block;
-  max-width: 100%;
-  height: auto;
-}
+
 %list {
   padding: 0;
   margin: 0;
   list-style: none;
+}
+%container {
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 15px;
+  padding-right: 15px;
+  width: 1200px;
+}
+%button {
+  border-radius: $borderRadius;
+  border: none;
+
+  font-family: inherit;
+  font-size: 16px;
+  cursor: pointer;
+  background-color: $accent-color;
 }
