--- a/css/main.css
+++ b/css/main.css
@@ -598,4 +598,31 @@ img {
 .social__link:hover, .social__link:focus {
   color: #ffffff;
   background-color: #2196f3;
+}
+
+.hero-section {
+  text-align: center;
+  background-color: #c4c4c4;
+  padding: 200px 0;
+  max-width: 1600px;
+  height: 600px;
+  margin-left: auto;
+  margin-right: auto;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/mainbgimg.jpg);
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/mainbgimg.jpg);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+.hero-section__title {
+  margin-bottom: 30px;
+  font-weight: 900;
+  font-size: 44px;
+  line-height: 1.36;
+  letter-spacing: 0.06em;
+  color: #ffffff;
+  text-transform: uppercase;
+}
+.hero-section__button {
+  width: 216.7px;
 }/*# sourceMappingURL=main.css.map */
