--- a/css1/styles1.css
+++ b/css1/styles1.css
@@ -164,7 +164,7 @@ p {
 
 /* ---------------hero --------------*/
 
-.hero {
+/* .hero {
   text-align: center;
   background-color: #c4c4c4;
   padding: 200px 0;
@@ -189,7 +189,7 @@ p {
   color: var(--white-text-color);
 
   text-transform: uppercase;
-}
+} */
 
 /* ----------button------------- */
 
@@ -202,7 +202,7 @@ p {
   cursor: pointer;
   background-color: var(--accent-color);
 } */
-.btn.primary {
+/* .btn.primary {
   transition: color var(--time-function), background-color var(--time-function),
     box-shadow var(--time-function);
   min-width: 200px;
@@ -220,7 +220,7 @@ p {
   color: var(--white-text-color);
   background-color: var(--hover-btn-color);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-}
+} */
 
 /* -----------section ------------------*/
 .section {
