--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,3 +8,4 @@
 @import './components/page-header';
 @import './components/page-footer';
 @import './components/socials';
+@import './components/hero-section'
