--- a/css/main.css
+++ b/css/main.css
@@ -1,15 +1,34 @@
-.social__item, .social__list, .address__list, .contacts, .page-header__list {
+.preferences__list, .social__item, .social__list, .address__list, .contacts, .page-header__list {
   padding: 0;
   margin: 0;
   list-style: none;
 }
 
-.page-footer__container, .page-header__container {
+.preferences__section, .page-footer__container, .page-header__container {
   margin-left: auto;
   margin-right: auto;
   padding-left: 15px;
   padding-right: 15px;
   width: 1200px;
+}
+
+.preferences__title {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  -webkit-clip-path: inset(100%);
+          clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+.preferences {
+  padding-top: 94px;
+  padding-bottom: 94px;
 }
 
 /*! modern-normalize v1.1.0 | MIT License | https://github.com/sindresorhus/modern-normalize */
@@ -625,4 +644,47 @@ img {
 }
 .hero-section__button {
   width: 216.7px;
+}
+
+.preferences__section {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.preferences__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  gap: 30px;
+}
+.preferences__item {
+  width: calc((100% - 90px) / 4);
+}
+.preferences__icons {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  height: 120px;
+  background-color: #f5f4fa;
+  margin-bottom: 30px;
+}
+.preferences__icon {
+  width: 70px;
+  height: 70px;
+}
+.preferences__subtitle {
+  margin-bottom: 10px;
+  font-weight: 700;
+  font-size: inherit;
+  line-height: 1.14;
+  color: #212121;
+  text-transform: uppercase;
 }/*# sourceMappingURL=main.css.map */
