--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,4 +8,6 @@
 @import './components/page-header';
 @import './components/page-footer';
 @import './components/socials';
-@import './components/hero-section'
+@import './components/hero-section';
+@import './components/preferences-section';
+
