--- a/sass/utils/_placeholders.scss
+++ b/sass/utils/_placeholders.scss
@@ -20,3 +20,19 @@
   cursor: pointer;
   background-color: $accent-color;
 }
+%visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+%section {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
