--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,4 +10,5 @@
 @import './components/socials';
 @import './components/hero-section';
 @import './components/preferences-section';
+@import './components/activities-section';
 
