--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,9 +6,11 @@
 @import './components/logo';
 @import './components/button';
 @import './components/page-header';
-@import './components/page-footer';
 @import './components/socials';
+@import './components/page-footer';
+
 @import './components/hero-section';
 @import './components/preferences-section';
 @import './components/activities-section';
+@import './components/team-section';
 
