--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,9 +8,10 @@
 @import './components/page-header';
 @import './components/socials';
 @import './components/page-footer';
-
 @import './components/hero-section';
 @import './components/preferences-section';
 @import './components/activities-section';
 @import './components/team-section';
+@import './components/clients-section'
+;
 
