--- a/sass/utils/_placeholders.scss
+++ b/sass/utils/_placeholders.scss
@@ -1,4 +1,3 @@
-
 %list {
   padding: 0;
   margin: 0;
@@ -35,4 +34,14 @@
 %section {
   padding-top: 94px;
   padding-bottom: 94px;
+}
+%section-title {
+  margin-bottom: 50px;
+
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.17;
+  color: $title-text-color;
+
+  text-align: center;
 }
