portfolio basic murkup

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -12,6 +12,6 @@
 @import './components/preferences-section';
 @import './components/activities-section';
 @import './components/team-section';
-@import './components/clients-section'
-;
+@import './components/clients-section';
+@import './components/portfolio';
 
