--- a/sass/main.scss
+++ b/sass/main.scss
@@ -13,5 +13,5 @@
 @import './components/activities-section';
 @import './components/team-section';
 @import './components/clients-section';
-@import './components/portfolio';
+@import './components/form';
 
