--- a/sass/components/_work-examples.scss
+++ b/sass/components/_work-examples.scss
@@ -15,32 +15,30 @@
     justify-content: center;
     gap: 8px;
   }
-
-  &__filter {
-  }
 }
 
 .button__filter {
-    transition: color $time-function, background-color $time-function, box-shadow $time-function;
-    border-radius: 4px;
-    border: none;
-    cursor: pointer;
-    height: 50px;
-    padding: 6px 22px;
-    font-family: inherit;
-    font-size: 16px;
-    font-weight: 500;
-    line-height: 1.62;
-    letter-spacing: 0.03em;
-    color: $title-text-color;
-    background-color: $accent-background-color;
-    &:hover,
-    &:focus {
-      color: $white-text-color;
-      background-color: $accent-color;
-      box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-        0px 2px 2px rgba(0, 0, 0, 0.12);}
-    }
+  transition: color $time-function, background-color $time-function, box-shadow $time-function;
+  border-radius: 4px;
+  border: none;
+  cursor: pointer;
+  height: 50px;
+  padding: 6px 22px;
+  font-family: inherit;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.62;
+  letter-spacing: 0.03em;
+  color: $title-text-color;
+  background-color: $accent-background-color;
+  &:hover,
+  &:focus {
+    color: $white-text-color;
+    background-color: $accent-color;
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+      0px 2px 2px rgba(0, 0, 0, 0.12);
+  }
+}
 
 .example-card {
   @extend %list;
