--- a/sass/components/_team-section.scss
+++ b/sass/components/_team-section.scss
@@ -7,7 +7,14 @@
   }
 
   &__title {
-   @extend %section-title;
+    margin-bottom: 50px;
+
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.17;
+    color: $title-text-color;
+
+    text-align: center;
   }
 
   &__list {
@@ -17,8 +24,6 @@
     gap: $card-gap;
   }
 
-  &__subtitle {
-  }
 }
 .team-card {
   width: calc((100% - (3 * $card-gap)) / 4);
