--- a/sass/components/_work-examples.scss
+++ b/sass/components/_work-examples.scss
@@ -96,7 +96,7 @@
     font-size: 18px;
     line-height: 2;
     letter-spacing: 0.06em;
-    color: var(--title-text-color);
+    color: $title-text-color;
     margin-bottom: 4px;
   }
 }
