--- a/css/main.css
+++ b/css/main.css
@@ -313,6 +313,15 @@ img {
   height: auto;
 }
 
+.section-title {
+  margin-bottom: 50px;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.17;
+  color: #212121;
+  text-align: center;
+}
+
 .logo {
   font-family: Raleway, sans-serif;
   font-weight: 700;
