--- a/sass/components/_body.scss
+++ b/sass/components/_body.scss
@@ -3,8 +3,8 @@ body {
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
-  color: var(--primary-text-color);
-  background-color: var(--bg-white-color);
+  color: $primary-text-color;
+  background-color: $bg-white-color;
   padding-top: 80px;
 }
 h1,
@@ -24,4 +24,14 @@ img {
   display: block;
   max-width: 100%;
   height: auto;
+}
+.section-title {
+  margin-bottom: 50px;
+
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.17;
+  color: $title-text-color;
+
+  text-align: center;
 }
