--- a/sass/components/_activities-section.scss
+++ b/sass/components/_activities-section.scss
@@ -6,7 +6,14 @@
   }
 
   &__title {
-    @extend %section-title;
+    margin-bottom: 50px;
+
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.17;
+    color: $title-text-color;
+
+    text-align: center;
   }
 
   &__list {
