--- a/css/main.css
+++ b/css/main.css
@@ -898,16 +898,15 @@ img {
   border: 1px solid rgba(0, 0, 0, 0.1);
   cursor: pointer;
 }
+.modal__button:focus .modal__icon-close, .modal__button:hover .modal__icon-close {
+  fill: #2196f3;
+}
 .modal__icon-close {
   width: 18px;
   height: 18px;
   fill: #000000;
   -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.modal .modal-btn:hover .icon-close,
-.modal .modal-btn:focus .icon-close {
-  fill: #2196f3;
 }
 
 .form {
@@ -1008,7 +1007,7 @@ img {
   display: block;
   margin-bottom: 10px;
 }
-.form__field:focus-within > .icon-form {
+.form__field:focus-within > .form__icon {
   fill: #2196f3;
 }
 
@@ -1031,7 +1030,7 @@ img {
   border: 1px solid #2196f3;
 }
 
-.form__checkbox:checked + .icon-check {
+.form__checkbox:checked + .form__icon-check {
   background-image: url(../images/icon-check.svg);
   background-size: contain;
   background-origin: border-box;
