corrects modal button

--- a/css/main.css
+++ b/css/main.css
@@ -840,13 +840,13 @@ img {
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.backdrop--is-hidden {
+.is-hidden {
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
 }
 
-.backdrop__modal--is-hidden {
+.is-hidden .modal {
   -webkit-transform: translate(-50%, 50%) scale(1.2);
           transform: translate(-50%, 50%) scale(1.2);
 }
