--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,7 +2,7 @@
 @import './utils/placeholders';
 @import './utils/mixins';
 @import './base-settings/normalize';
-@import './components/body';
+@import './components/common';
 @import './components/logo';
 @import './components/button';
 @import './components/page-header';
