--- a/css/main.css
+++ b/css/main.css
@@ -579,19 +579,6 @@ img {
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
 }
-.sign-up__label {
-  position: absolute;
-  top: 50%;
-  left: 16px;
-  font-size: 16px;
-  line-height: 1.25;
-  letter-spacing: 0.03em;
-  color: rgba(255, 255, 255, 0.6);
-  -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
-  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 .sign-up__button {
   position: relative;
   padding: 10px 62px 10px 28px;
@@ -607,14 +594,25 @@ img {
           transform: translateY(-50%);
 }
 
+.sign-up__label {
+  position: absolute;
+  top: 50%;
+  left: 16px;
+  font-size: 16px;
+  line-height: 1.25;
+  letter-spacing: 0.03em;
+  color: rgba(255, 255, 255, 0.6);
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 .sign-up__input:not(:-moz-placeholder-shown) + .sign-up__label {
   color: transparent;
 }
-
 .sign-up__input:not(:-ms-input-placeholder) + .sign-up__label {
   color: transparent;
 }
-
 .sign-up__input:focus + .sign-up__label, .sign-up__input:not(:placeholder-shown) + .sign-up__label {
   color: transparent;
 }
@@ -829,6 +827,7 @@ img {
 }
 
 .backdrop {
+  z-index: 2;
   position: fixed;
   top: 0;
   left: 0;
@@ -940,22 +939,8 @@ img {
 }
 .form__contract-link {
   color: #2196f3;
-  text-decoration: underline;
-}
-.form__icon-check {
-  position: absolute;
-  display: inline-block;
-  top: 50%;
-  left: 12px;
-  -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
-  width: 16px;
-  height: 15px;
-  fill: white;
-  border: 2px solid #212121;
-  border-radius: 2px;
-  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  text-decoration: none;
+  border-bottom: 1px solid #2196f3;
 }
 
 .form__textarea-input {
@@ -1030,9 +1015,25 @@ img {
   border: 1px solid #2196f3;
 }
 
+.form__icon-check {
+  position: absolute;
+  display: inline-block;
+  top: 50%;
+  left: 12px;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  width: 16px;
+  height: 15px;
+  fill: white;
+  border: 2px solid #212121;
+  border-radius: 2px;
+  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 .form__checkbox:checked + .form__icon-check {
   background-image: url(../images/icon-check.svg);
   background-size: contain;
+  background-position: center;
   background-origin: border-box;
   border-color: #2196f3;
   background-color: #2196f3;
