--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -579,19 +579,6 @@ img {
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
 }
-.sign-up__label {
-  position: absolute;
-  top: 50%;
-  left: 16px;
-  font-size: 16px;
-  line-height: 1.25;
-  letter-spacing: 0.03em;
-  color: rgba(255, 255, 255, 0.6);
-  -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
-  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 .sign-up__button {
   position: relative;
   padding: 10px 62px 10px 28px;
@@ -607,14 +594,25 @@ img {
           transform: translateY(-50%);
 }
 
+.sign-up__label {
+  position: absolute;
+  top: 50%;
+  left: 16px;
+  font-size: 16px;
+  line-height: 1.25;
+  letter-spacing: 0.03em;
+  color: rgba(255, 255, 255, 0.6);
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 .sign-up__input:not(:-moz-placeholder-shown) + .sign-up__label {
   color: transparent;
 }
-
 .sign-up__input:not(:-ms-input-placeholder) + .sign-up__label {
   color: transparent;
 }
-
 .sign-up__input:focus + .sign-up__label, .sign-up__input:not(:placeholder-shown) + .sign-up__label {
   color: transparent;
 }
@@ -677,21 +675,6 @@ img {
   position: relative;
   overflow: hidden;
 }
-.example-card__overlay {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(33, 150, 243, 0.9);
-  top: 0;
-  left: 0;
-  -webkit-transform: translateY(101%);
-          transform: translateY(101%);
-  -webkit-transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  overflow: auto;
-}
 .example-card__text {
   position: absolute;
   top: 50%;
@@ -736,8 +719,22 @@ img {
           box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
-.example-card__link:hover .example-card__overlay,
-.example-card__link:focus .example-card__overlay {
+.example-card__overlay {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(33, 150, 243, 0.9);
+  top: 0;
+  left: 0;
+  -webkit-transform: translateY(101%);
+          transform: translateY(101%);
+  -webkit-transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  overflow: auto;
+}
+.example-card__link:hover .example-card__overlay, .example-card__link:focus .example-card__overlay {
   -webkit-transform: translateY(0);
           transform: translateY(0);
 }/*# sourceMappingURL=portfolio.css.map */
