--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -1,4 +1,5 @@
 .backdrop {
+  z-index: 2;
   position: fixed;
   top: 0;
   left: 0;
@@ -103,21 +104,8 @@
 
   &__contract-link {
     color: $accent-color;
-    text-decoration: underline;
-  }
-
-  &__icon-check {
-    position: absolute;
-    display: inline-block;
-    top: 50%;
-    left: 12px;
-    transform: translateY(-50%);
-    width: 16px;
-    height: 15px;
-    fill: white;
-    border: 2px solid $title-text-color;
-    border-radius: 2px;
-    transition: color $time-function, background-color $time-function;
+    text-decoration: none;
+    border-bottom: 1px solid $accent-color;
   }
 }
 .form__textarea-input {
@@ -171,9 +159,23 @@
 }
 .form__checkbox {
   @extend %visually-hidden;
-  &:checked + .form__icon-check {
+}
+.form__icon-check {
+  position: absolute;
+  display: inline-block;
+  top: 50%;
+  left: 12px;
+  transform: translateY(-50%);
+  width: 16px;
+  height: 15px;
+  fill: white;
+  border: 2px solid $title-text-color;
+  border-radius: 2px;
+  transition: color $time-function, background-color $time-function;
+  .form__checkbox:checked + & {
     background-image: url(../images/icon-check.svg);
     background-size: contain;
+    background-position: center;
     background-origin: border-box;
     border-color: $accent-color;
     background-color: $accent-color;
