--- a/sass/components/_page-footer.scss
+++ b/sass/components/_page-footer.scss
@@ -100,18 +100,7 @@
     letter-spacing: 0.03em;
     color: rgba(255, 255, 255, 0.6);
   }
-  &__label {
-    position: absolute;
-    top: 50%;
-    left: 16px;
 
-    font-size: 16px;
-    line-height: 1.25;
-    letter-spacing: 0.03em;
-    color: rgba(255, 255, 255, 0.6);
-    transform: translateY(-50%);
-    transition: color $time-function;
-  }
   &__button {
     position: relative;
     padding: 10px 62px 10px 28px;
@@ -127,9 +116,19 @@
   }
 }
 
-.sign-up__input {
-  &:focus + .sign-up__label,
-  &:not(:placeholder-shown) + .sign-up__label {
-    color: transparent;
+.sign-up__label {
+    position: absolute;
+    top: 50%;
+    left: 16px;
+
+    font-size: 16px;
+    line-height: 1.25;
+    letter-spacing: 0.03em;
+    color: rgba(255, 255, 255, 0.6);
+    transform: translateY(-50%);
+    transition: color $time-function;
+    .sign-up__input:focus + &,
+    .sign-up__input:not(:placeholder-shown) + & {
+      color: transparent;
+    }
   }
-}
