--- a/sass/components/_work-examples.scss
+++ b/sass/components/_work-examples.scss
@@ -61,18 +61,6 @@
     overflow: hidden;
   }
 
-  &__overlay {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(33, 150, 243, 0.9);
-    top: 0;
-    left: 0;
-    transform: translateY(101%);
-    transition: transform $time-function;
-    overflow: auto;
-  }
-
   &__text {
     position: absolute;
     top: 50%;
@@ -117,7 +105,18 @@
   }
 }
 
-.example-card__link:hover .example-card__overlay,
-.example-card__link:focus .example-card__overlay {
-  transform: translateY(0);
+.example-card__overlay {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(33, 150, 243, 0.9);
+  top: 0;
+  left: 0;
+  transform: translateY(101%);
+  transition: transform $time-function;
+  overflow: auto;
+  .example-card__link:hover &,
+  .example-card__link:focus & {
+    transform: translateY(0);
+  }
 }
