--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -14,7 +14,10 @@
   width: 200px;
   height: 50px;
   padding: 10px 32px;
-  transition: color $time-function, background-color $time-function, box-shadow $time-function;
+  @include transition(color);
+  @include transition(background-color);
+  @include transition(box-shadow);
+  
   &:hover,
   &:focus {
     background-color: $hover-btn-color;
