--- a/sass/components/_clients-section.scss
+++ b/sass/components/_clients-section.scss
@@ -33,7 +33,9 @@
 }
 
 .clients__thumb {
-  transition: color $time-function, border $time-function;
+  @include transition(color);
+  @include transition(border);
+
   display: flex;
   justify-content: center;
   align-items: center;
