--- a/sass/components/_work-examples.scss
+++ b/sass/components/_work-examples.scss
@@ -18,7 +18,9 @@
 }
 
 .button__filter {
-  transition: color $time-function, background-color $time-function, box-shadow $time-function;
+  @include transition(color);
+  @include transition(background-color);
+  @include transition(box-shadow);
   border-radius: 4px;
   border: none;
   cursor: pointer;
@@ -95,7 +97,8 @@
 
 .example-card__link {
   text-decoration: none;
-  transition: box-shadow $time-function;
+  @include transition(box-shadow);
+
   display: block;
   color: inherit;
   &:hover,
@@ -113,7 +116,8 @@
   top: 0;
   left: 0;
   transform: translateY(101%);
-  transition: transform $time-function;
+  @include transition(transform);
+
   overflow: auto;
   .example-card__link:hover &,
   .example-card__link:focus & {
