--- a/css/main.css
+++ b/css/main.css
@@ -623,6 +623,10 @@ img {
   color: transparent;
 }
 
+.page-footer__contacts {
+  width: 231px;
+}
+
 .hero-section {
   text-align: center;
   background-color: #c4c4c4;
@@ -949,8 +953,7 @@ img {
 }
 .form__contract-link {
   color: #2196f3;
-  text-decoration: none;
-  border-bottom: 1px solid #2196f3;
+  text-decoration: underline;
 }
 
 .form__textarea-input {
@@ -1008,6 +1011,7 @@ img {
 
 .form__input {
   width: 100%;
+  height: 40px;
   font: inherit;
   padding-top: 11px;
   padding-bottom: 11px;
