--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -106,8 +106,8 @@
 
   &__contract-link {
     color: $accent-color;
-    text-decoration: none;
-    border-bottom: 1px solid $accent-color;
+    text-decoration: underline;
+    
   }
 }
 .form__textarea-input {
@@ -143,6 +143,7 @@
 }
 .form__input {
   width: 100%;
+  height: 40px;
   font: inherit;
   padding-top: 11px;
   padding-bottom: 11px;
