corrects class name in header

--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -6,7 +6,7 @@
   width: 100%;
   background-color: $bg-white-color;
   z-index: 1;
-  &_nav {
+  &__nav {
     display: flex;
     align-items: center;
   }
